Fix: Atoms/DatePickerInput stop propagation onClickoutside Fix: Atoms/YearPickerInput stop propagation onClickoutside Fix: Atoms/DynamicSearchInput supporting controlled method (reset from the input, set from the input, ...) Fix: Atoms/DynamicSearchCreatableInput supporting controlled method (reset from the input, set from the input, ...) Fix: Molecules/Field add overflow hidden for filter Fix: Organisms/Filter set search field of the bar flex grow 1 and flex shrink 1 Fix: Organisms/FilterItem enable portal for date picker Fix: hooks/useOnClickOutside now check if the dom target is in the ref and if the x y coordinates are inside the area of the object

--- a/src/assets/_field.scss
+++ b/src/assets/_field.scss
@@ -72,6 +72,7 @@
 
 .field {
   display: flex;
+  overflow: hidden;
 }
 
 @for $size from 1 through 12 {
